# Receiptory

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.claude/: settings.local.json
backend/: auth.py  config.py  database.py  main.py  models.py  storage.py
backend/api/: auth.py  backup.py  categories.py  cloud_auth.py  documents.py  export.py  logs.py  queue.py  settings.py  stats.py  upload.py
backend/backup/: cloud_auth.py  rclone.py  runner.py  scheduler.py
backend/ingestion/: gmail.py  telegram.py  url_fetcher.py  url_triage.py  watched_folder.py
backend/notifications/: email_notify.py  notifier.py  telegram_notify.py  templates.py
backend/processing/: extract.py  filing.py  normalize.py  pipeline.py  queue.py
docs/: initial_specifications.md
frontend/: index.html  package-lock.json  package.json
migrations/: 001_initial_schema.sql  002_unauthorized_sender_and_backup_path.sql  003_fts_add_filename.sql  004_add_source_url.sql  005_category_sections.sql
tests/: conftest.py  test_auth.py  test_auth_api.py  test_backup.py  test_categories_api.py  test_config.py  test_database.py  test_documents_api.py  test_e2e.py  test_email_classification.py  test_export.py  test_extract.py  test_filing.py  test_gmail_smart_ingestion.py  test_gmail_urls.py  test_normalize.py  test_pipeline.py  test_queue.py  test_settings_api.py  test_stats.py  test_storage.py  test_telegram_urls.py  test_upload.py  test_url_fetch_config.py  test_url_fetcher.py  test_url_integration.py  test_url_triage.py
(+53 files in other folders)
