[project]
name = "receiptory"
version = "1.2.0"
description = "Self-hosted receipt and invoice management system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "litellm>=1.60.0",
    "PyMuPDF>=1.25.0",
    "Pillow>=11.0.0",
    "weasyprint>=63.0",
    "bcrypt>=4.2.0",
    "itsdangerous>=2.2.0",
    "croniter>=6.0.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
